iac/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secdev-app-service
  namespace: secdev-namespace
spec:
  selector:
    app: secdev-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
